test/reductions/vass/illegal-elttype.chpl

record RRR { }

var AAA: [1..100] RRR;

proc main {
  var result = + reduce AAA;
  writeln(result);
}
